<resources>
    <string name="app_name">네트워크 보안랩</string>
    <string name="app_version">ver. alpha 1.0</string>

    <!-- Global -->
    <string name="glb_title_kor">네트워크 보안 연구실</string>
    <string name="glb_title_eng">Network Security Lab.</string>
    <string name="lab_name">Network Security Lab</string>
    <string name="glb_slogan">미래를 향한 꿈 세계를 향한 도전</string>
    <string name="glb_slider">|</string>

    <string name="glb_authorization">Authorization</string>
    <string name="glb_internet_error">서버 통신에 실패했습니다.\n인터넷 상태를 확인해주세요.</string>

    <!-- Global Select -->
    <string name="glb_add_finish">추가 완료</string>
    <string name="glb_edit_finish">수정 완료</string>
    <string name="glb_finish">완료</string>
    <string name="glb_cancel">취소</string>

    <!-- Global Sample -->
    <string name="glb_sample_number">201700000</string>
    <string name="glb_sample_permission">연구실 부원</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- bottom_menu -->
    <string name="nav_menu_home">홈</string>
    <string name="nav_menu_board">커뮤니티</string>
    <string name="nav_menu_schedule">일정</string>
    <string name="nav_menu_my_page">마이페이지</string>

    <!-- LoginActivity -->
    <string name="obj_login_number">학번</string>
    <string name="obj_login_pw">비밀번호</string>

    <string name="obj_login">로그인</string>
    <string name="obj_forgot_password">비밀번호 찾기</string>
    <string name="obj_sign_up">회원가입</string>

    <string name="obj_auto_login">자동 로그인</string>

    <string name="msg_login_need_id">학번을 입력해주세요</string>
    <string name="msg_login_need_pw">비밀번호를 입력해주세요</string>
    <string name="msg_login_fail">학번 혹은 비밀번호가 잘못 입력되었습니다</string>

    <!-- RegisterActivity -->
    <string name="obj_reg_title">회원 가입</string>

    <string name="obj_reg_number">학번</string>
    <string name="obj_reg_number_hint">학번을 입력해주세요</string>
    <string name="obj_reg_pw">비밀번호</string>
    <string name="ogj_reg_pw_hint">비밀번호를 입력해주세요</string>
    <string name="obj_reg_pw_check">비밀번호 확인</string>
    <string name="obj_reg_pw_check_hint">비밀번호를 다시 한번 입력해주세요</string>
    <string name="obj_reg_name">이름</string>
    <string name="obj_reg_name_hint">이름을 입력해주세요</string>
    <string name="obj_reg_email">이메일</string>
    <string name="obj_reg_email_hint">이메일을 입력해주세요</string>
    <string name="obj_reg_phone">핸드폰 번호</string>
    <string name="obj_reg_phone_hint">"'-' 없이 입력해주세요</string>

    <string name="obj_reg_finish">회원 가입</string>


    <string name="msg_sign_up_success">회원가입이 완료되었습니다</string>
    <string name="msg_sign_up_pw_not_checked">비밀번호가 일치하지 않습니다</string>
    <string name="msg_sign_up_duplicated">중복되는 아이디 입니다</string>

    <!-- HomeFragment -->
    <string name="obj_welcome">네트워크 보안 연구실에 오신 것을 환영합니다.</string>
    <string name="obj_home_lab_show">연구실 소개</string>
    <string name="obj_home_books">도서 현황</string>
    <string name="obj_home_lab_group">연구실 구성원</string>

    <string name="obj_home_smart_lab">스마트 랩실</string>
    <string name="obj_home_smart_door">재실 여부</string>
    <string name="obj_home_smart_door_opened">문 열림</string>
    <string name="obj_home_smart_door_closed">문 닫힘</string>

    <string name="obj_home_smart_coffee">커피 용량</string>
    <string name="obj_home_smart_coffee_enough">커피 있음</string>
    <string name="obj_home_smart_coffee_empty">커피 없음</string>

    <string name="obj_home_smart_a4">용지 여부</string>
    <string name="obj_home_smart_a4_enough">종이 있음</string>
    <string name="obj_home_smart_a4_empty">종이 없음</string>

    <string name="obj_home_smart_light">전등</string>
    <string name="obj_home_smart_light_on">불 켜짐</string>
    <string name="obj_home_smart_light_off">불 꺼짐</string>


    <!-- BooksActivity -->
    <string name="obj_books_title">도서 목록</string>
    <string name="obj_books_search_hint">검색어를 입력하세요</string>

    <!-- BooksAddActivity -->
    <string name="obj_book_add_title">도서 추가하기</string>
    <string name="obj_book_add_picture">사진 추가하기 +</string>
    <string name="obj_book_title_hint">제목</string>
    <string name="obj_book_add_author">저자</string>
    <string name="obj_book_add_publish">출판사</string>
    <string name="obj_book_add_finish">도서 추가</string>
    <string name="msg_max_image_count_exceed">첨부 가능한 사진 갯수를 초과했어요</string>

    <!-- ScheduleFragment-->
    <string name="obj_sch_tab0">랩실 일정</string>
    <string name="obj_sch_tab1">회의 일정</string>

    <string name="msg_sch_delete_complete">일정 삭제가 완료되었어요</string>

    <!-- ScheduleAddActivity -->
    <string name="obj_sch_add_appbar">신규 일정 추가</string>
    <string name="obj_sch_add_title_hint">제목을 입력해주세요</string>
    <string name="obj_sch_add_cal">날짜</string>
    <string name="obj_sch_add_cal_add">+ 날짜 추가</string>
    <string name="obj_sch_add_cal_time_add">+ 시작일 시간 추가</string>
    <string name="obj_sch_add_cal_end_add">+ 종료일 추가</string>
    <string name="obj_sch_add_cal_end_time_add">+ 종료일 시간 추가</string>
    <string name="obj_sch_add_tag">태그</string>
    <string name="obj_sch_add_tag_add">+ 태그 추가하기</string>
    <string name="obj_sch_add_content_hint">내용을 입력해주세요</string>
    <string name="obj_sch_add_tag_title">태그 추가하기</string>
    <string name="obj_sch_add_no_tags">추가 가능한 태그가 없어요</string>
    <string name="obj_sch_add_include_time">시간 포함</string>
    <string name="obj_sch_add_person">참석자</string>
    <string name="obj_sch_add_tag_person">+ 참석자 추가하기</string>

    <string name="msg_sch_add_finish">일정 등록이 완료되었어요</string>


    <!-- MyPageFragment -->
    <string name="obj_my_page_number">학번</string>
    <string name="obj_my_page_noti">알람</string>
    <string name="obj_my_page_noti_item_empty">비품 소진 시 알림</string>
    <string name="obj_my_page_noti_meeting">회의 알림</string>
    <string name="obj_my_page_theme">화면 테마</string>
    <string name="obj_my_page_theme_light">라이트 모드</string>
    <string name="obj_my_page_account">계정</string>
    <string name="obj_my_page_password_change">비밀번호 변경</string>
    <string name="obj_my_page_withdrawal">회원탈퇴</string>
    <string name="obj_my_page_app_version">앱 버전</string>
    <string name="obj_logout">로그아웃</string>
    <string name="msg_logout_content">로그아웃 하시겠습니까?</string>
    <string name="glb_logout">로그아웃</string>

    <!-- dialog_withdrawal -->
    <string name="obj_wd_title">연구실 회원을 탈퇴하시겠습니까?</string>
    <string name="obj_wd_content">탈퇴 시 정보는 즉시 삭제되며,\n삭제된 정보는 복구할 수 없습니다.</string>
    <string name="obj_wd_no">아니요. 탈퇴하지 않겠습니다.</string>
    <string name="obj_wd_yes">네, 탈퇴하겠습니다</string>


    <!-- ProjectActivity -->
    <string name="obj_prj_github_repo">Github 저장소</string>
    <string name="obj_member_title">연구실 구성원</string>
    <string name="obj_introduce_title">연구실 소개</string>
    <string name="obj_intro_content">네트워크 보안 연구실(NSL, Network Security Lab.)은 20XX년, 네트워크 보안 분야의 연구를 목적으로 창설되었습니다.\n\n네트워크 보안 분야 이외에도 여러 분야에 연구를 진행하고 있으며, 여러 학회에 학술대회에 참가하거나, 프로젝트를 진행합니다.\n\n\n찾아오시는 길\n\n충청남도 천안시 서북구 천안대로 1223-24\n제 8공학관 915호</string>
    <string name="msg_wait">잠시만 기다려주세요</string>
    <string name="obj_sch_add_person_title">참석자 추가하기</string>
    <string name="obj_sch_add_no_person">추가 가능한 사람이 없어요</string>


    <!-- MemberActivity -->


</resources>