<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/icon_home"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_community"
        android:enabled="true"
        android:icon="@drawable/icon_board"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_board"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_schedule"
        android:enabled="true"
        android:icon="@drawable/icon_calendar"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_schedule"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_my_page"
        android:enabled="true"
        android:icon="@drawable/icon_person"
        android:iconTint="@color/main_color_100"
        android:title="@string/nav_menu_my_page"
        app:showAsAction="always" />
</menu>

