<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/text_box_padding">

    <TextView
        style="@style/subTitleColorTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obj_wd_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap_vertical"
        android:text="@string/obj_wd_content"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/btn_withdrawal_no"
        android:layout_height="@dimen/btn_full_height"
        android:layout_marginTop="@dimen/gap_vertical"
        android:background="@drawable/btn_negative_10"
        android:text="@string/obj_wd_no"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/btn_withdrawal_yes"
        android:background="@drawable/btn_default_10"
        android:text="@string/obj_wd_yes"
        android:layout_marginTop="@dimen/gap_line"
        android:layout_height="@dimen/btn_full_height"/>

</LinearLayout>