<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_10"
    android:orientation="vertical"
    tools:context=".pages.myPage.MyPageFragment">

    <TextView
        android:id="@+id/tv_my_page_title"
        style="@style/subTitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="5dp"
        android:padding="@dimen/text_box_padding"
        android:text="마이페이지" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:background="@drawable/round_white_10"
                android:orientation="vertical"
                android:padding="@dimen/text_box_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/subTitleColorTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="회원정보"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/gap_line"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="이름" />

                        <TextView
                            android:id="@+id/tv_my_page_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="홍길동" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/gap_line"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="학번" />

                        <TextView
                            android:id="@+id/tv_my_page_student_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/glb_sample_number" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gap_line"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="직책" />

                    <TextView
                        android:id="@+id/tv_my_page_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        tools:text="@string/glb_sample_permission" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/gap_line"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="이메일" />

                    <TextView
                        android:id="@+id/tv_my_page_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="example@nsl.ac.kr" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:background="@drawable/round_white_10"
                android:orientation="vertical"
                android:padding="@dimen/text_box_padding">

                <TextView
                    style="@style/subTitleColorTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obj_my_page_noti" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/obj_my_page_noti_item_empty" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:text="@string/obj_my_page_noti_meeting" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:background="@drawable/round_white_10"
                android:orientation="vertical"
                android:padding="@dimen/text_box_padding">

                <TextView
                    style="@style/subTitleColorTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obj_my_page_account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gap_line"
                    android:text="@string/obj_my_page_password_change" />

                <TextView
                    android:id="@+id/tv_my_page_withdrawal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/gap_line"
                    android:text="@string/obj_my_page_withdrawal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:background="@drawable/round_white_10"
                android:padding="@dimen/text_box_padding">

                <TextView
                    style="@style/subTitleColorTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obj_my_page_app_version" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/app_version" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gap_vertical"
                android:layout_marginBottom="@dimen/gap_vertical"
                android:background="@drawable/round_white_10"
                android:gravity="right"
                android:padding="@dimen/margin_20"
                android:text="@string/obj_logout" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>