<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pages.home.bookPage.bookAdd.BookAddActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_book_add"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/obj_book_add_title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_20">

        <Button
            android:id="@+id/btn_book_add_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_image"
            android:text="@string/obj_book_add_picture"
            android:textColor="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                androidid="@+id/et_book_title"
                android:hint="@string/obj_book_title_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

</LinearLayout>